change all projects to java 8
a tomar por el culo chavales y me la pela