@@ -4,6 +4,7 @@ package us.smartmc.smartbot.instance;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -20,7 +21,7 @@ public abstract class SlashCommand extends ListenerAdapter implements ISlashComm
 
     public SlashCommand(String name, String... aliases) {
         this.name = name;
-        this.aliases.addAll(List.of(aliases));
+        this.aliases.addAll(Arrays.asList(aliases));
     }
 
     public void setDescription(String description) {
